Fixed the log entry modal so that it doesn't go offscreen when displaying long content (eg a stacktrace). A vertical scrollbar is now enabled. Removed excessive padding.

--- a/Client/Src/app.css
+++ b/Client/Src/app.css
@@ -18,8 +18,8 @@
 }
 
 .log-details-panel {
-    margin-top: 5em;
-    margin-right: 1em;
+    max-height: 800px;
+    overflow-y: scroll;
 }
 
 .log-list {
